Update FAQ to include steps for data deletion

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -232,6 +232,8 @@ faq.match.question=I can't get any matches, any tips?
 faq.match.answer=Add clear and unedited pictures to your profile. Tell people what you like and what you are looking for in the description.
 faq.no-users.question=There are no users in my area!
 faq.no-users.answer=You can try in a few days, new users will be in your area eventually. Additionally, you can donate or tell your family and friends to make this platform even more popular!
+faq.delete-data.question=I want to delete my data, how can I do it?
+faq.delete-data.answer=We are sad to see you go, but if you are sure, click on the "Delete account" link on the bottom of your profile page. Afterwards just follow the instructions that we sent you to your email address.
 
 imprint.title=Imprint
 
