--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -222,6 +222,8 @@ faq.match.question=Ich bekomme keine Matches, irgendwelche Tipps?
 faq.match.answer=Benutze klare und unbearbeitete Bilder zu deinem Profil hinzu. Teilen in deiner Beschreibung, was dir gefällt und wonach du suchst.
 faq.no-users.question=In meinem Gebiet gibt es keine Nutzer!
 faq.no-users.answer=Du kannst es nochmal in ein paar Tagen versuchen, neue Nutzer kommen regelmäßig zur Platform. Zusätzlich kannst du spenden oder deiner Familie und Freunden davon erzählen, um diese Plattform noch beliebter zu machen!
+faq.delete-data.question=Ich möchte meine Daten löschen, wie kann ich das tun?
+faq.delete-data.answer=Wir sind traurig, Dich gehen zu sehen, aber wenn Du dir sicher bist, dann klicke auf den "Konto löschen" Link unten auf Deiner Profilseite. Folge danach einfach den Anweisungen, die wir Dir an Deine E-Mail-Adresse schicken.
 
 imprint.title=Impressum
 
