--- a/src/main/resources/i18n/messages_es.properties
+++ b/src/main/resources/i18n/messages_es.properties
@@ -222,6 +222,8 @@ faq.match.question=No tengo cerillas, ¿algún consejo?
 faq.match.answer=Usa imágenes claras y sin editar para añadirlas a tu perfil. Comparte lo que te gusta y lo que buscas en tu descripción.
 faq.no-users.question=¡No hay usuarios en mi área!
 faq.no-users.answer=Puedes intentarlo de nuevo en unos días, nuevos usuarios vendrán a la plataforma regularmente. Además, puedes donar o contarle a tu familia y amigos para hacer esta plataforma aún más popular.
+faq.delete-data.question=Quiero borrar mis datos, ¿cómo puedo hacerlo?
+faq.delete-data.answer=Nos entristece que te vayas, pero si estás seguro, haz clic en el enlace "Eliminar cuenta" que aparece en la parte inferior de tu página de perfil. Después, sólo tienes que seguir las instrucciones que te enviamos a tu dirección de correo electrónico.
 
 imprint.title=Pie de imprenta
 
