--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -222,6 +222,8 @@ faq.match.question=Je ne reçois pas d'allumettes, ni de tuyaux?
 faq.match.answer=Utilisez des images claires et non retouchées pour enrichir votre profil. Partagez ce que vous aimez et ce que vous recherchez dans votre description.
 faq.no-users.question=Il n'y a pas d'utilisateurs dans ma région!
 faq.no-users.answer=Vous pourrez réessayer dans quelques jours, de nouveaux utilisateurs viendront régulièrement sur la plateforme. De plus, vous pouvez faire un don ou en parler à votre famille et à vos amis pour rendre cette plateforme encore plus populaire!
+faq.delete-data.question=Je veux supprimer mes données, comment puis-je le faire ?
+faq.delete-data.answer=Nous sommes tristes de vous voir partir, mais si vous êtes sûr, cliquez sur le lien "Supprimer le compte" en bas de votre page de profil. Ensuite, il suffit de suivre les instructions que nous envoyons à votre adresse électronique.
 
 imprint.title=Mentions légales
 
