--- a/src/main/resources/i18n/messages_it.properties
+++ b/src/main/resources/i18n/messages_it.properties
@@ -222,6 +222,8 @@ faq.match.question=Non ricevo fiammiferi, qualche consiglio?
 faq.match.answer=Utilizzate immagini chiare e non modificate da aggiungere al vostro profilo. Condividete ciò che vi piace e ciò che cercate nella vostra descrizione.
 faq.no-users.question=Non ci sono utenti nella mia zona!
 faq.no-users.answer=Potete riprovare tra qualche giorno, i nuovi utenti arriveranno regolarmente sulla piattaforma. Inoltre potete donare o dire alla vostra famiglia e ai vostri amici di questa piattaforma per renderla ancora più popolare!
+faq.delete-data.question=Voglio cancellare i miei dati, come posso farlo?
+faq.delete-data.answer=Siamo tristi di vederti andare via, ma se sei sicuro, clicca sul link "Cancella account" in fondo alla pagina del tuo profilo. Dopo di che, basta seguire le istruzioni che inviamo al tuo indirizzo e-mail.
 
 imprint.title=Impronta
 
