--- a/src/main/resources/i18n/messages_ko.properties
+++ b/src/main/resources/i18n/messages_ko.properties
@@ -222,6 +222,8 @@ faq.match.question=성냥이나 팁이 없나요?
 faq.match.answer=프로필에 선명하고 편집되지 않은 이미지를 사용하십시오. 당신이 좋아하는 것과 찾고있는 것을 설명에 공유하십시오.
 faq.no-users.question=내 지역에 사용자가 없습니다!
 faq.no-users.answer=며칠 후에 다시 시도 할 수 있으며 새로운 사용자가 정기적으로 플랫폼을 방문합니다. 또한이 플랫폼을 더욱 인기있게 만들기 위해 기부하거나 가족 및 친구에게 알릴 수 있습니다!
+faq.delete-data.question = 데이터를 삭제하고 싶습니다. 어떻게해야합니까?
+faq.delete-data.answer = 당신이 떠난 다니 안타깝지만 확실하다면 프로필 페이지 하단에있는 "계정 삭제"링크를 클릭하십시오. 그런 다음 귀하의 이메일 주소로 보내드릴 지침을 따르십시오.
 
 imprint.title=날인
 
