--- a/src/main/resources/i18n/messages_pt.properties
+++ b/src/main/resources/i18n/messages_pt.properties
@@ -222,6 +222,8 @@ faq.match.question=Não tenho fósforos, alguma dica?
 faq.match.answer=Utilize imagens claras e não editadas para adicionar ao seu perfil. Partilhe o que gosta e o que procura na sua descrição.
 faq.no-users.question=Não há utilizadores na minha área!
 faq.no-users.answer=Pode tentar novamente dentro de alguns dias, novos utilizadores virão à plataforma regularmente. Além disso, pode doar ou contar à sua família e amigos para tornar esta plataforma ainda mais popular!
+faq.delete-data.question=Quero apagar os meus dados, como posso fazer isso?
+faq.delete-data.answer=Lamentamos vê-lo partir, mas se tiver a certeza, clique na ligação "Delete Account" no fundo da sua página de perfil. Depois disso, basta seguir as instruções que enviamos para o seu endereço de correio electrónico.
 
 imprint.title=Impressão
 
