--- a/src/main/resources/i18n/messages_zh.properties
+++ b/src/main/resources/i18n/messages_zh.properties
@@ -222,6 +222,8 @@ faq.match.question=我没有得到火柴，有什么技巧吗？
 faq.match.answer=使用清晰和未经编辑的图像添加到您的个人资料。在你的描述中分享你喜欢什么，你在寻找什么。
 faq.no-users.question=我所在的地区没有用户!
 faq.no-users.answer=你可以过几天再试试，新用户会定期来平台。此外你还可以捐赠或告诉你的家人和朋友，让这个平台更受欢迎!
+faq.delete-data.question=我想删除我的数据，我怎样才能做到？
+faq.delete-data.answer=我们很难过看到你离开，但如果你确定，点击你的个人资料页面底部的 "删除账户 "链接。之后，只需按照我们发给你的电子邮件地址的指示行事。
 
 imprint.title=版本说明
 
