Search now tries harder finding for users. Now almost guaranteed to show users in search.

--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -199,6 +199,8 @@ search.sort.filter.distance=La plus petite distance
 search.sort.filter.active=Dernière activité
 search.sort.filter.interests=Intérêts
 search.donation.popup=Vous voulez faire un don? Chaque centime nous aide à atteindre de nouveaux utilisateurs et à ajouter de nouvelles fonctionnalités pour améliorer votre expérience!
+search.warning.global=Aucun utilisateur compatible dans votre environnement. Les utilisateurs du monde entier sont désormais affichés.
+search.warning.incompatible=Aucun utilisateur compatible trouvé. Les utilisateurs incompatibles sont maintenant aussi affichés, alors faites attention !
 search.js.error.no-geolocation=Votre navigateur ne prend pas en charge la géolocalisation HTML5. Veuillez essayer un autre navigateur.
 search.js.error.no-location=La position n'a pas pu être déterminée. Assurez-vous que votre GPS est allumé.
 
