--- a/src/main/resources/i18n/messages_it.properties
+++ b/src/main/resources/i18n/messages_it.properties
@@ -199,6 +199,8 @@ search.sort.filter.distance=Distanza minima
 search.sort.filter.active=Ultimo attivo
 search.sort.filter.interests=Interessi
 search.donation.popup=Vuoi donare? Ogni centesimo ci aiuta a raggiungere nuovi utenti e ad aggiungere nuove funzionalità per migliorare la tua esperienza!
+search.warning.global=Nessun utente compatibile nel tuo ambiente. Ora vengono visualizzati gli utenti di tutto il mondo.
+search.warning.incompatible=Nessun utente compatibile trovato. Ora vengono visualizzati anche gli utenti incompatibili, quindi fate attenzione!
 search.js.error.no-geolocation=Il tuo browser non supporta la geolocalizzazione HTML5. Si prega di provare un altro browser.
 search.js.error.no-location=Non è stato possibile determinare la posizione. Si assicuri che il suo GPS sia acceso.
 
