--- a/src/main/resources/i18n/messages_pt.properties
+++ b/src/main/resources/i18n/messages_pt.properties
@@ -199,6 +199,8 @@ search.sort.filter.distance=Menor distância
 search.sort.filter.active=Último activo
 search.sort.filter.interests=Interesses
 search.donation.popup=Quer doar? Cada cêntimo ajuda-nos a chegar a novos utilizadores e a acrescentar novas funcionalidades para melhorar a sua experiência!
+search.warning.global=Não há utilizadores compatíveis no seu ambiente. Utilizadores de todo o mundo são agora exibidos.
+search.warning.incompatible=Não foram encontrados utilizadores compatíveis. Os utilizadores incompatíveis são agora também exibidos, por isso tenha cuidado!
 search.js.error.no-geolocation=O seu navegador não suporta a geolocalização HTML5. Por favor, tente outro navegador.
 search.js.error.no-location=A posição não pôde ser determinada. Assegure-se de que o seu GPS está ligado.
 
