--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -199,6 +199,8 @@ search.sort.filter.distance=Наикратчайшее расстояние
 search.sort.filter.active=Последний активный
 search.sort.filter.interests=Интересы
 search.donation.popup=Хочешь пожертвовать? Каждый цент помогает нам охватить новых пользователей и добавить новые функции для улучшения вашего опыта!
+search.warning.global=Нет совместимых пользователей в вашей среде. Теперь отображаются пользователи со всего мира.
+search.warning.incompatible=Не найдено совместимых пользователей. Несовместимые пользователи теперь также отображаются, поэтому будьте осторожны!
 search.js.error.no-geolocation=Ваш браузер не поддерживает геолокацию HTML5. Пожалуйста, попробуйте другой браузер.
 search.js.error.no-location=Позиция не может быть определена. Убедитесь, что ваш GPS включен.
 
