--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -209,6 +209,8 @@ search.sort.filter.distance=Lowest distance
 search.sort.filter.active=Active date
 search.sort.filter.interests=Interests
 search.donation.popup=Do you want to donate? Each cent will help us reach out new users and add new features to improve the overall experience!
+search.warning.global=No compatible users in your area. Showing users all around the globe.
+search.warning.incompatible=No compatible users found. Showing incompatible users, be careful!
 search.js.error.no-geolocation=Your browser does not support HTML5 geolocation. Please try with another browser.
 search.js.error.no-location=Position could not be determined. Make sure that your GPS is turned on.
 
