--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -199,6 +199,8 @@ search.sort.filter.distance=Kleinster Abstand
 search.sort.filter.active=Zuletzt aktiv
 search.sort.filter.interests=Interessen
 search.donation.popup=Möchtest du spenden? Jeder Cent hilft uns, neue Benutzer zu erreichen und neue Funktionen hinzuzufügen, um dein Erlebnis zu verbessern!
+search.warning.global=Keine kompatiblen Nutzer in Deinem Umfeld. Es werden nun Nutzer aus der ganzen Welt angezeigt.
+search.warning.incompatible=Keine kompatiblen Nutzer gefunden. Es werden nun auch inkompatible Nutzer angezeigt, sei also achtsam!
 search.js.error.no-geolocation=Dein Browser unterstützt keine HTML5-Geolokalisierung. Bitte versuche es mit einem anderen Browser.
 search.js.error.no-location=Position konnte nicht ermittelt werden. Stell sicher, dass Du dein GPS angeschaltet ist.
 
