--- a/src/main/resources/i18n/messages_es.properties
+++ b/src/main/resources/i18n/messages_es.properties
@@ -199,6 +199,8 @@ search.sort.filter.distance=La distancia más pequeña
 search.sort.filter.active=El último activo
 search.sort.filter.interests=Intereses
 search.donation.popup=¿Quiere donar? Cada céntimo nos ayuda a llegar a nuevos usuarios y a añadir nuevas funciones para mejorar tu experiencia.
+search.warning.global=No hay usuarios compatibles en su entorno. Ahora aparecen usuarios de todo el mundo.
+search.warning.incompatible=No se han encontrado usuarios compatibles. Ahora también se muestran los usuarios incompatibles, ¡así que ten cuidado!
 search.js.error.no-geolocation=Su navegador no soporta la geolocalización HTML5. Por favor, intente con otro navegador.
 search.js.error.no-location=No se ha podido determinar la posición. Asegúrate de que tu GPS está encendido.
 
