--- a/src/main/resources/i18n/messages_ja.properties
+++ b/src/main/resources/i18n/messages_ja.properties
@@ -199,6 +199,8 @@ search.sort.filter.distance=最短距離
 search.sort.filter.active=最後のアクティブ
 search.sort.filter.interests=関心事
 search.donation.popup=寄付をしたいですか？すべてのセントは、私たちが新しいユーザーに到達し、あなたの経験を向上させるための新機能を追加するのに役立ちます。
+search.warning.global=あなたの環境では互換性のあるユーザーがいません。世界各国のユーザーが表示されるようになりました。
+search.warning.incompatible=互換性のあるユーザーが見つかりませんでした。相性の悪いユーザーも表示されるようになったので、注意が必要です。
 search.js.error.no-geolocation=お使いのブラウザはHTML5ジオロケーションをサポートしていません。別のブラウザをお試しください。
 search.js.error.no-location=ポジションは決定できませんでした。GPSがオンになっていることを確認してください。
 
