--- a/src/main/resources/i18n/messages_zh.properties
+++ b/src/main/resources/i18n/messages_zh.properties
@@ -199,6 +199,8 @@ search.sort.filter.distance=最短距离
 search.sort.filter.active=最后活动
 search.sort.filter.interests=兴趣爱好
 search.donation.popup=要不要捐款？每一分钱都能帮助我们接触到新的用户，并增加新的功能来改善您的体验!
+search.warning.global=你的环境中没有兼容的用户。现在显示的是来自世界各地的用户。
+search.warning.incompatible=没有找到兼容的用户。不兼容的用户现在也会被显示出来，所以要小心!
 search.js.error.no-geolocation=您的浏览器不支持HTML5地理定位。请尝试其他浏览器。
 search.js.error.no-location=职位无法确定。确保你的GPS已经打开。
 
