--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -118,8 +118,10 @@ donate.donate-now=Donate now
 index.cookie.notice=This site uses cookies to store the session and user preferences to function properly. Your data is safe with us, as we don't store any personal information in the cookies nor do we send any information to a third party. By continuing to use this site you agree to the use of cookies.
 index.cookie.more=Click here to learn more
 #do not translate
-index.subtitle=Meet amazing people, privately! 
-
+index.subtitle=Meet new, exciting people!
+index.subtitle-2=100% free, no ads 
+index.notice=All photos are of models and used for illustrative purposes only
+index.key-features=Key features
 index.free.title=Forever free
 index.free.description=This platform does not require you to pay any kind of fee, you are free to use all features without limitations. We solely rely on your generous donations to keep this platform running.
 index.open-source.title=Open-source
