Update homepage translation

--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -110,7 +110,9 @@ donate.donate-now=Jetzt spenden
 
 index.cookie.notice=Diese Seite verwendet Cookies, um die Sitzungs- und Benutzereinstellungen zu speichern, damit die Seite ordnungsgemäß funktioniert. Deine Daten sind bei uns sicher, da wir weder persönliche Informationen in den Cookies speichern noch Informationen an Dritte senden. Durch die weitere Nutzung dieser Website stimmst du der Verwendung von Cookies zu.
 index.cookie.more=Klicke hier, um mehr zu erfahren
-
+index.subtitle-2=100% kostenlos, keine Werbung 
+index.notice=Alle Fotos sind von Models und dienen nur der Illustration
+index.key-features=Schlüsselmerkmale
 index.free.title=Für immer frei
 index.free.description=Für diese Plattform musst du keine Gebühren zahlen, du kannst alle Funktionen ohne Einschränkungen nutzen. Wir sind ausschließlich auf Ihre großzügigen Spenden angewiesen, um diese Plattform am Laufen zu halten.
 index.open-source.title=Open-source
