--- a/src/main/resources/i18n/messages_it.properties
+++ b/src/main/resources/i18n/messages_it.properties
@@ -110,7 +110,9 @@ donate.donate-now=Dona ora
 
 index.cookie.notice=Questo sito utilizza i cookie per memorizzare le impostazioni di sessione e dell'utente in modo che il sito possa funzionare correttamente. Le vostre informazioni sono al sicuro con noi perché non memorizziamo informazioni personali nei cookie o non inviamo informazioni a terzi. Continuando ad utilizzare questo sito, l'utente acconsente all'uso dei cookie.
 index.cookie.more=Clicca qui per saperne di più
-
+index.subtitle-2=100% gratuito, nessuna pubblicità 
+index.notice=Tutte le foto sono di modelli e sono solo a scopo illustrativo
+index.key-features=Caratteristiche chiave
 index.free.title=Libero per sempre
 index.free.description=Per questa piattaforma non dovete pagare alcun canone, potete utilizzare tutte le funzioni senza restrizioni. Per mantenere in funzione questa piattaforma dipendiamo esclusivamente dalle vostre generose donazioni.
 index.open-source.title=Open-source
