--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -110,7 +110,9 @@ donate.donate-now=Пожертвовать сейчас
 
 index.cookie.notice=Этот сайт использует файлы cookie для хранения сеансов и пользовательских настроек, чтобы сайт мог функционировать должным образом. Ваша информация находится в безопасности с нами, потому что мы не храним личную информацию в файлах cookie и не отправляем ее третьим лицам. Продолжая пользоваться этим сайтом, вы соглашаетесь на использование cookie-файлов.
 index.cookie.more=Нажмите здесь, чтобы узнать больше
-
+index.subtitle-2=100% бесплатно, без рекламы 
+index.notice=Все фотографии сделаны на моделях и предназначены только для иллюстрации
+index.key-features=Ключевые особенности
 index.free.title=Бесплатно навсегда
 index.free.description=Для этой платформы вам не нужно платить никакой платы, вы можете использовать все функции без ограничений. Мы зависим только от ваших щедрых пожертвований, чтобы поддерживать эту платформу в рабочем состоянии.
 index.open-source.title=Открытый исходный код
