--- a/src/main/resources/i18n/messages_es.properties
+++ b/src/main/resources/i18n/messages_es.properties
@@ -110,7 +110,9 @@ donate.donate-now=Dona ahora
 
 index.cookie.notice=Este sitio utiliza cookies para almacenar la sesión y la configuración del usuario para que el sitio pueda funcionar correctamente. Su información está segura con nosotros porque no almacenamos información personal en las cookies ni enviamos información a terceros. Al continuar usando este sitio, usted consiente en el uso de cookies.
 index.cookie.more=Haga clic aquí para saber más
-
+index.subtitle-2=100% gratis, sin publicidad 
+index.notice=Todas las fotos son de modelos y son sólo para fines ilustrativos
+index.key-features=Características clave
 index.free.title=Libre para siempre
 index.free.description=Para esta plataforma no tienes que pagar ninguna cuota, puedes usar todas las funciones sin restricciones. Dependemos exclusivamente de sus generosas donaciones para mantener esta plataforma en funcionamiento.
 index.open-source.title=Código abierto
