--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -110,7 +110,9 @@ donate.donate-now=Faire un don
 
 index.cookie.notice=Ce site utilise des cookies pour stocker les paramètres de session et d'utilisateur afin que le site puisse fonctionner correctement. Vos informations sont en sécurité chez nous car nous ne stockons pas d'informations personnelles dans les cookies et n'envoyons pas d'informations à des tiers. En continuant à utiliser ce site, vous consentez à l'utilisation de cookies.
 index.cookie.more=Cliquez ici pour en savoir plus
-
+index.subtitle-2=100% gratuit, pas de publicité 
+index.notice=Toutes les photos sont des modèles et ne servent qu'à des fins d'illustration
+index.key-features=Caractéristiques clés
 index.free.title=Libre pour toujours
 index.free.description=Pour cette plateforme, vous ne devez payer aucun frais, vous pouvez utiliser toutes les fonctions sans restrictions. Nous dépendons uniquement de vos généreux dons pour faire fonctionner cette plateforme.
 index.open-source.title=Open-source
