--- a/src/main/resources/i18n/messages_ja.properties
+++ b/src/main/resources/i18n/messages_ja.properties
@@ -110,7 +110,9 @@ donate.donate-now=今すぐ寄付する
 
 index.cookie.notice=当サイトでは、サイトを正常に機能させるために、セッションとユーザー設定を保存するためにクッキーを使用しています。クッキーに個人情報を保存したり、第三者に情報を送信したりすることはありませんので、お客様の情報は安全です。このサイトを継続して利用することで、クッキーの使用に同意したことになります。
 index.cookie.more=詳細はこちらをクリックしてください。
-
+index.subject-2=100%無料、広告なし 
+index.notice=全ての写真はモデルを撮影したもので、説明のためのものです。
+index.key-features=キー・フィーチャー
 index.free.title=永遠に無料
 index.free.description=このプラットフォームのためには、任意の料金を支払う必要はありません、あなたは制限なしですべての機能を使用することができます。私たちは、このプラットフォームの運営を維持するために、皆様からの寛大な寄付にのみ依存しています。
 index.open-source.title=オープンソース
