--- a/src/main/resources/i18n/messages_ko.properties
+++ b/src/main/resources/i18n/messages_ko.properties
@@ -110,7 +110,9 @@ donate.donate-now=지금 기부하세요
 
 index.cookie.notice=이 사이트는 쿠키를 사용하여 세션 및 사용자 설정을 저장하므로 사이트가 제대로 작동합니다. 당사는 개인 정보를 쿠키에 저장하거나 제 3 자에게 정보를 전송하지 않기 때문에 귀하의 데이터는 안전합니다. 이 웹 사이트를 계속 사용하면 쿠키 사용에 동의하는 것입니다.
 index.cookie.more=자세한 내용을 보려면 여기를 클릭하십시오
-
+index.subtitle-2 = 100 % 무료, 광고 없음
+index.notice = 모든 사진은 모델이며 설명 용입니다.
+index.key-features = 주요 특징
 index.free.title=영원히 무료
 index.free.description=이 플랫폼에 대한 비용을 지불 할 필요가 없으며 제한없이 모든 기능을 사용할 수 있습니다. 우리는이 플랫폼을 계속 운영하기 위해 전적으로 귀하의 관대 한 기부에 의존합니다.
 index.open-source.title=오픈 소스
