--- a/src/main/resources/i18n/messages_pt.properties
+++ b/src/main/resources/i18n/messages_pt.properties
@@ -110,7 +110,9 @@ donate.donate-now=Doar agora
 
 index.cookie.notice=Este site utiliza cookies para armazenar as configurações de sessão e de utilizador, para que o site possa funcionar correctamente. As suas informações estão seguras connosco porque não armazenamos informações pessoais nos cookies ou não enviamos informações a terceiros. Ao continuar a utilizar este site, consente a utilização de cookies.
 index.cookie.more=Clique aqui para saber mais
-
+index.subtitle-2=100% grátis, sem publicidade 
+index.notice=Todas as fotos são de modelos e são apenas para fins ilustrativos
+index.key-features=Key features
 index.free.title=Livre para sempre
 index.free.description=Para esta plataforma não tem de pagar quaisquer taxas, pode utilizar todas as funções sem restrições. Estamos exclusivamente dependentes das suas generosas doações para manter esta plataforma em funcionamento.
 index.open-source.title=Código Aberto
