--- a/src/main/resources/i18n/messages_zh.properties
+++ b/src/main/resources/i18n/messages_zh.properties
@@ -110,7 +110,9 @@ donate.donate-now=捐献
 
 index.cookie.notice=本网站使用Cookie来存储会话和用户设置，以便网站能够正常运行。您的信息在我们这里是安全的，因为我们不会在cookies中存储个人信息，也不会将信息发送给第三方。如果您继续使用本网站，即表示您同意使用cookies。
 index.cookie.more=点击这里了解更多
-
+index.subtitle-2=100%免费，无广告 
+index.notice=所有照片均为模型，仅作说明之用。
+index.key-features=关键特征
 index.free.title=永远免费
 index.free.description=对于这个平台，你不需要支付任何费用，你可以无限制地使用所有功能。我们完全依靠您的慷慨捐助来维持这个平台的运行。
 index.open-source.title=开放源码
