--- a/src/main/resources/i18n/message_cz.properties
+++ b/src/main/resources/i18n/message_cz.properties
@@ -156,7 +156,7 @@ message.js.error.max-length=Dosáhli jste maximálního počtu znaků.
 message.js.video.confirm=Pozvat partnera chatu k videochatu?
 
 notification.title=Oznámení
-notification.liked-by=Byli jste označeni lajkem
+notification.liked-by=Zalíbili jste se
 
 password-change.title=Změnit heslo
 password-change.warning=Vaše heslo musí mít alespoň 7 znaků a musí obsahovat znaky a čísla.
@@ -185,7 +185,7 @@ profile.audio.delete=Smazat zvuk?
 profile.delete-account.success=Úspěch! Zkontrolujte prosím svou poštovní schránku a pozorně si přečtěte pokyny.
 profile.ui-design=Design uživatelského rozhraní
 profile.ui-design.rounded=Zaoblené
-profile.ui-design.angular=Úhlové
+profile.ui-design.angular=Hranaté
 
 profile.js.delete-image.confirm=Smazat vybraný obrázek?
 
@@ -195,7 +195,7 @@ register.subtitle=Vytvořit nový účet
 # register.gender.male=profil.gender.male
 # register.gender.female=profil.gender.female
 # register.gender.other=profile.gender.other
-register.email.sign-up=Zaregistrujte se e-mailem
+register.email.sign-up=Zaregistrujte se emailem
 register.tos-agree=Souhlasím s <a href="/tos"> smluvními podmínkami </a>
 register.privacy-agree=Souhlasím s <a href="/privacy"> zásadami ochrany osobních údajů </a>
 register.asterisk-warning=Pole s hvězdičkou (*) nelze v budoucnu změnit
