--- a/src/main/resources/i18n/message_cz.properties
+++ b/src/main/resources/i18n/message_cz.properties
@@ -132,10 +132,10 @@ index.technology.description=Používáme nejnovější technologie, abyste mohl
 index.for-you.title=Vytvořeno pro vás
 index.for-you.description=Díky pokročilým filtrům vám ukážeme pouze lidi, kteří splňují vaše kritéria. Tímto způsobem strávíte méně času hledáním a více času hledáním a poznáváním nových lidí.
 index.sign-up-now=Zaregistrujte se hned!
-index.js.confirm-registration=Na vaši e-mailovou adresu byl zaslán potvrzovací e-mail.
+index.js.confirm-registration=Na vaši emailovou adresu byl zaslán potvrzovací email.
 index.js.registration-confirm-success=Potvrzení proběhlo úspěšně, nyní se můžete přihlásit a poznat nové lidi ve vaší oblasti!
 index.js.registration-confirm-failed=Potvrzení selhalo, zkuste to prosím znovu!
-index.js.password-reset-required=Byl odeslán e-mail pro resetování hesla, zkontrolujte prosím své emaily a postupujte podle pokynů.
+index.js.password-reset-required=Byl odeslán email pro resetování hesla, zkontrolujte prosím své emaily a postupujte podle pokynů.
 index.js.password-change-success=Vaše heslo bylo úspěšně změněno!
 index.js.confirm-account-deleted=Váš účet byl úspěšně smazán!
 
@@ -147,7 +147,7 @@ login.oauth.facebook=Přihlaste se pomocí Facebooku
 login.email.sign-in=Přihlaste se pomocí emailu
 login.register=Nemáte účet?
 login.privacy-policy=Zásady ochrany osobních údajů byly aktualizovány na
-login.js.error=Přihlášení se nezdařilo, zkontrolujte prosím své přihlašovací údaje, vyplňte captcha a zkuste to znovu. Pokud váš účet ještě nebyl ověřen, byl vám zaslán nový potvrzovací e-mail.
+login.js.error=Přihlášení se nezdařilo, zkontrolujte prosím své přihlašovací údaje, vyplňte captcha a zkuste to znovu. Pokud váš účet ještě nebyl ověřen, byl vám zaslán nový potvrzovací email.
 
 message.title=Zprávy
 message.match=Máte shodu! Klepnutím sem odešlete zprávu :)
@@ -235,7 +235,7 @@ faq.match.answer=Přidejte do svého profilu jasné a neupravené obrázky. V po
 faq.no-users.question=V mé oblasti nejsou žádní uživatelé!
 faq.no-users.answer=Můžete to zkusit za několik dní, nakonec budou ve vaší oblasti noví uživatelé. Kromě toho můžete darovat nebo říct rodině a přátelům, aby byla tato platforma ještě populárnější!
 faq.delete-data.question=Chci smazat svá data, jak to mohu udělat?
-faq.delete-data.answer=Je nám líto, že odcházíte, ale pokud jste si jisti, klikněte na odkaz „Smazat účet“ ve spodní části vaší profilové stránky. Poté postupujte podle pokynů, které jsme vám zaslali na vaši e-mailovou adresu.
+faq.delete-data.answer=Je nám líto, že odcházíte, ale pokud jste si jisti, klikněte na odkaz „Smazat účet“ ve spodní části vaší profilové stránky. Poté postupujte podle pokynů, které jsme vám zaslali na vaši emailovou adresu.
 
 imprint.title=Tiráž
 
