--- a/src/main/resources/i18n/message_cz.properties
+++ b/src/main/resources/i18n/message_cz.properties
@@ -196,8 +196,8 @@ register.subtitle=Vytvořit nový účet
 # register.gender.female=profil.gender.female
 # register.gender.other=profile.gender.other
 register.email.sign-up=Zaregistrujte se emailem
-register.tos-agree=Souhlasím s <a href="/tos"> smluvními podmínkami </a>
-register.privacy-agree=Souhlasím s <a href="/privacy"> zásadami ochrany osobních údajů </a>
+register.tos-agree=Souhlasím se <a href="/tos"> smluvními podmínkami </a>
+register.privacy-agree=Souhlasím se <a href="/privacy"> zásadami ochrany osobních údajů </a>
 register.asterisk-warning=Pole s hvězdičkou (*) nelze v budoucnu změnit
 register.login=Již máte účet?
 register.oauth.google=Zaregistrujte se pomocí Google
