Fix mail links for several languages

--- a/src/main/resources/i18n/messages_cz.properties
+++ b/src/main/resources/i18n/messages_cz.properties
@@ -278,10 +278,10 @@ backend.webpush.message.message=Kliknutím sem získáte další informace
 # MAIL #
 
 backend.mail.register.subject=Vaše registrace na {0}
-backend.mail.register.body=Dobrý den {0}, <br> děkujeme za registraci na adrese {1}. Potvrďte prosím svou registraci: {2}/zaregistrovat/potvrdit/{3}
+backend.mail.register.body=Dobrý den {0}, <br> děkujeme za registraci na adrese {1}. Potvrďte prosím svou registraci: {2}/register/confirm/{3}
 
 backend.mail.password-reset.subject=Obnovení hesla
-backend.mail.password-reset.body=Dobrý den, {0}, <br> o obnovení hesla jste požádali na adrese {1}. Chcete-li obnovit své heslo, navštivte následující odkaz: {2}/heslo/změna/{3}
+backend.mail.password-reset.body=Dobrý den, {0}, <br> o obnovení hesla jste požádali na adrese {1}. Chcete-li obnovit své heslo, navštivte následující odkaz: {2}/password/change/{3}
 
 backend.mail.account-delete-request.subject=Mazání vašeho účtu
 backend.mail.account-delete-request.body=Dobrý den, {0}, <br> požádali jste o smazání svého účtu na {1}. Chcete-li svůj účet trvale smazat, navštivte následující odkaz: {2}/delete-account/{3}. Odkaz bude k dispozici do 24 hodin a bude platný 24 hodin.
