--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -267,10 +267,10 @@ backend.webpush.message.message=Cliquez ici pour en savoir plus
 # MAIL #
 
 backend.mail.register.subject=Votre inscription à {0}
-backend.mail.register.body=Bonjour {0}, <br> Merci de vous inscrire auprès de {1}. Veuillez confirmer votre inscription : {2}/register/confirmer/{3}
+backend.mail.register.body=Bonjour {0}, <br> Merci de vous inscrire auprès de {1}. Veuillez confirmer votre inscription : {2}/register/confirm/{3}
 
 backend.mail.password-reset.subject=Réinitialisation de votre mot de passe
-backend.mail.password-reset.body=Bonjour {0}, <br> Vous avez demandé une réinitialisation de votre mot de passe à {1}. Visitez le lien suivant si vous souhaitez réinitialiser votre mot de passe : {2}/mot de passe/modification/{3}
+backend.mail.password-reset.body=Bonjour {0}, <br> Vous avez demandé une réinitialisation de votre mot de passe à {1}. Visitez le lien suivant si vous souhaitez réinitialiser votre mot de passe : {2}/password/change/{3}
 
 backend.mail.account-delete-request.subject=Suppression de votre compte
 backend.mail.account-delete-request.body=Bonjour {0}, <br> Vous avez demandé la suppression de votre compte à {1}. Veuillez consulter le lien suivant si vous souhaitez supprimer votre compte de manière permanente : {2}/delete-account/{3}. Le lien sera disponible dans 24 heures et valable pendant 24 heures.
