--- a/src/main/resources/i18n/messages_pt.properties
+++ b/src/main/resources/i18n/messages_pt.properties
@@ -267,7 +267,7 @@ backend.webpush.message.message=Clique aqui para saber mais
 # MAIL #
 
 backend.mail.register.subject=A sua inscrição em {0}
-backend.mail.register.body=Olá {0}, <br> Obrigado por se registar com {1}. Por favor confirme o seu registo: {2}/register/confirmar/{3}.
+backend.mail.register.body=Olá {0}, <br> Obrigado por se registar com {1}. Por favor confirme o seu registo: {2}/register/confirm/{3}.
 
 backend.mail.password-reset.subject=Repor a sua palavra-passe
 backend.mail.password-reset.body=Olá {0}, <br> Pediu a redefinição da sua palavra-passe em {1}. Visite o seguinte link se quiser redefinir a sua palavra-passe: {2}/password/change/{3}
