--- a/src/main/resources/i18n/messages_zh.properties
+++ b/src/main/resources/i18n/messages_zh.properties
@@ -267,7 +267,7 @@ backend.webpush.message.message=点击这里了解更多
 # MAIL #
 
 backend.mail.register.subject=您在{0}注册
-backend.mail.register.body=您好{0}，<br>感谢您在{1}注册。请确认您的注册：{2}/注册/确认/{3}。
+backend.mail.register.body=您好{0}，<br>感谢您在{1}注册。请确认您的注册：{2}/register/confirm/{3}。
 
 backend.mail.password-reset.subject=重新设置密码
 backend.mail.password-reset.body=您好{0}，<br>您已在{1}申请重置密码。如果您想重新设置密码，请访问以下链接：{2}/password/change/{3}。
