--- a/src/main/resources/i18n/messages_es.properties
+++ b/src/main/resources/i18n/messages_es.properties
@@ -267,10 +267,10 @@ backend.webpush.message.message=Haga clic aquí para saber más
 # MAIL #
 
 backend.mail.register.subject=Su registro en {0}
-backend.mail.register.body=Hola, gracias por registrarse en la oficina. Por favor, confirme su registro: {2}/registro/confirme/{3}
+backend.mail.register.body=Hola, gracias por registrarse en la oficina. Por favor, confirme su registro: {2}/register/confirm/{3}
 
 backend.mail.password-reset.subject=Restablecimiento de la contraseña
-backend.mail.password-reset.body=Hola {0}, <br> Ha solicitado un restablecimiento de su contraseña en {1}. Visite el siguiente enlace si desea restablecer su contraseña: {2}/contraseña/cambio/{3}
+backend.mail.password-reset.body=Hola {0}, <br> Ha solicitado un restablecimiento de su contraseña en {1}. Visite el siguiente enlace si desea restablecer su contraseña: {2}/password/change/{3}
 
 backend.mail.account-delete-request.subject=Eliminación de su cuenta
 backend.mail.account-delete-request.body=Hola {0}, <br> Ha solicitado que se elimine su cuenta en {1}. Por favor, visite el siguiente enlace si desea eliminar su cuenta de forma permanente: {2}/delete-account/{3}. El enlace estará disponible en 24 horas y será válido durante 24 horas.
