--- a/src/main/resources/i18n/messages_it.properties
+++ b/src/main/resources/i18n/messages_it.properties
@@ -267,13 +267,13 @@ backend.webpush.message.message=Clicca qui per saperne di più
 # MAIL #
 
 backend.mail.register.subject=La sua iscrizione al {0}
-backend.mail.register.body=Ciao {0}, <br> Grazie per esserti registrato con {1}. Si prega di confermare la registrazione: {2}/registrazione/conferma/{3}
+backend.mail.register.body=Ciao {0}, <br> Grazie per esserti registrato con {1}. Si prega di confermare la registrazione: {2}/register/confirm/{3}
 
 backend.mail.password-reset.subject=Reimpostare la password
 backend.mail.password-reset.body=Ciao {0}, <br> Hai richiesto un reset della tua password a {1}. Visitate il seguente link se volete reimpostare la vostra password: {2}/password/change/{3}
 
 backend.mail.account-delete-request.subject=Cancellare il tuo account
-backend.mail.account-delete-request.body=Ciao {0}, <br> Hai richiesto la cancellazione del tuo account a {1}. Si prega di visitare il seguente link se si desidera cancellare definitivamente il proprio account: {2}/cancella-conto/{3}. Il link sarà disponibile in 24 ore e valido per 24 ore.
+backend.mail.account-delete-request.body=Ciao {0}, <br> Hai richiesto la cancellazione del tuo account a {1}. Si prega di visitare il seguente link se si desidera cancellare definitivamente il proprio account: {2}/delete-account/{3}. Il link sarà disponibile in 24 ore e valido per 24 ore.
 
 backend.mail.account-delete-confirm.subject=Cancellazione del conto
 backend.mail.account-delete-confirm.body=Hallo {0}, <br> Wir haben Ihr Konto bei {1} gelöscht. Wenn Sie Ihre Meinung ändern, können Sie jederzeit ein neues Konto erstellen. Wir hoffen, wieder von Ihnen zu hören :)
