Add link to liked users in profile

--- a/src/main/resources/i18n/messages_cz.properties
+++ b/src/main/resources/i18n/messages_cz.properties
@@ -92,6 +92,9 @@ meta.content=Seznamte se s novými lidmi ve vaší oblasti, zcela soukromě pomo
 block-users.title=Blokovaní uživatelé
 profile.blocked-users=Zobrazit blokované uživatele
 
+liked-users.title=Líbí se mi uživatelé
+profile.liked-users=Zobrazit oblíbené uživatele
+
 profile.warning.incomplete=Uživatelský profil je neúplný, ostatní uživatelé vás neuvidí.
 profile.warning.no-profile-picture=Nebyl nalezen žádný profilový obrázek!
 profile.warning.no-description=Nebyl nalezen žádný popis!
