--- a/src/main/resources/i18n/messages_es.properties
+++ b/src/main/resources/i18n/messages_es.properties
@@ -85,6 +85,9 @@ meta.content=Conoce a nuevas personas en tu zona, de forma totalmente privada co
 blocked-users.title=Usuarios bloqueados
 profile.blocked-users=Mostrar usuarios bloqueados
 
+liked-users.title=Usuarios a los que les gusta
+profile.liked-users=Mostrar los usuarios que le gustan
+
 profile.warning.incomplete=Su perfil de usuario está incompleto y no puede ser visto por otros usuarios.
 profile.warning.no-profile-picture=¡No se encontró ninguna foto de perfil!
 profile.warning.no-description=¡No se encontró ninguna descripción!
