--- a/src/main/resources/i18n/messages_it.properties
+++ b/src/main/resources/i18n/messages_it.properties
@@ -85,6 +85,9 @@ meta.content=Incontra nuove persone nella tua zona, completamente in privato con
 blocked-users.title=Utenti bloccati
 profile.blocked-users=Mostra gli utenti bloccati
 
+liked-users.title=Utenti apprezzati
+profile.liked-users=Mostra utenti graditi
+
 profile.warning.incomplete=Il vostro profilo utente è incompleto e non può essere visto da altri utenti.
 profile.warning.no-profile-picture=Nessuna foto del profilo trovata!
 profile.warning.no-description=Nessuna descrizione trovata!
