--- a/src/main/resources/i18n/messages_pt.properties
+++ b/src/main/resources/i18n/messages_pt.properties
@@ -85,6 +85,9 @@ meta.content=Conheça novas pessoas na sua área, completamente em privado com t
 blocked-users.title=Utilizadores bloqueados
 profile.blocked-users=Mostrar utilizadores bloqueados
 
+liked-users.title=Utilizadores preferidos
+profile.liked-users=Mostrar utilizadores apreciados
+
 profile.warning.incomplete=O seu perfil de utilizador está incompleto e não pode ser visto por outros utilizadores.
 profile.warning.no-profile-picture=Nenhuma foto de perfil encontrada!
 profile.warning.no-description=Nenhuma descrição encontrada!
