--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -85,6 +85,9 @@ meta.content=Познакомьтесь с новыми людьми в ваше
 blocked-users.title=Заблокированные пользователи
 profile.blocked-users=Показать заблокированных пользователей
 
+liked-users.title=Понравившиеся пользователи
+profile.liked-users=Показать понравившихся пользователей
+
 profile.warning.incomplete=Ваш пользовательский профиль неполный и не может быть замечен другими пользователями.
 profile.warning.no-profile-picture=Фотография профиля не найдена!
 profile.warning.no-description=Описание не найдено!
