--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -85,6 +85,9 @@ meta.content=Rencontrez de nouvelles personnes dans votre région, en toute conf
 blocked-users.title=Utilisateurs bloqués
 profile.blocked-users=Afficher les utilisateurs bloqués
 
+liked-users.title=Utilisateurs appréciés
+profile.liked-users=Montrer les utilisateurs aimés
+
 profile.warning.incomplete=Votre profil d'utilisateur est incomplet et ne peut pas être vu par les autres utilisateurs.
 profile.warning.no-profile-picture=Aucune photo de profil trouvée!
 profile.warning.no-description=Aucune description trouvée!
