Add Remember checkbox for email login

--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -140,6 +140,7 @@ login.oauth.google=Anmelden mit Google
 login.oauth.facebook=Anmelden mit Facebook
 login.email.sign-in=Anmelden mit E-Mail
 login.register=Noch kein Konto?
+login.remember=Angemeldet bleiben
 login.privacy-policy=Datenschutzerklärung wurde zuletzt aktualisiert am 
 login.js.error=Anmeldung fehlgeschlagen, bitte überprüfe die Anmeldedaten, fülle das Captcha aus und versuche es erneut. Eine neue Bestätigungs-E-Mail wurde versendet, falls dein Konto noch nicht verifiziert wurde.
 
