--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -140,6 +140,7 @@ login.oauth.google=Connectez-vous avec Google
 login.oauth.facebook=Connectez-vous avec Facebook
 login.email.sign-in=Se connecter avec l'e-mail
 login.register=Vous n'avez pas de compte?
+login.remember=Restez connecté
 login.js.error=La connexion a échoué, veuillez vérifier les données de connexion, remplir le captcha et réessayer. Un nouveau courriel de confirmation a été envoyé si votre compte n'a pas encore été vérifié.
 message.title=Nouvelles
 message.match=Un match! Quelqu'un vous aime en retour ! Tapez ici pour envoyer un message :)
