--- a/src/main/resources/i18n/messages_it.properties
+++ b/src/main/resources/i18n/messages_it.properties
@@ -140,6 +140,7 @@ login.oauth.google=Accedi con Google
 login.oauth.facebook=Accedi con Facebook
 login.email.sign-in=Accesso con e-mail
 login.register=Non hai un account?
+login.remember=Rimani collegato
 login.js.error=Login fallito, controllare i dati di accesso, compilare il captcha e riprovare. Una nuova email di conferma è stata inviata se il tuo account non è ancora stato verificato.
 message.title=Notizie
 message.match=È stata richiesta una video chat dal tuo partner di chat!
