--- a/src/main/resources/i18n/messages_ja.properties
+++ b/src/main/resources/i18n/messages_ja.properties
@@ -140,6 +140,7 @@ login.oauth.google=Googleでログイン
 login.oauth.facebook=Facebookでログイン
 login.email.sign-in=Eメールでのログイン
 login.register=アカウントをお持ちでない方
+login.remember=ログイン状態を維持する
 login.js.error=ログインに失敗しました、ログインデータをご確認の上、キャプチャをご記入の上、再度お試しください。アカウントがまだ確認されていない場合は、新しい確認メールが送信されています。
 message.title=ニュース
 message.match=マッチ！好きな人が戻ってきた！メッセージを送信するにはここを入力してください :)
