--- a/src/main/resources/i18n/messages_ko.properties
+++ b/src/main/resources/i18n/messages_ko.properties
@@ -140,6 +140,7 @@ login.oauth.google=Google로 로그인
 login.oauth.facebook=Facebook으로 로그인
 login.email.sign-in=이메일로 로그인 
 login.register=계정이 없으십니까?
+login.remember=로그인 유지
 login.js.error=로그인에 실패했습니다. 로그인 세부 정보를 확인하고 보안 문자를 입력 한 후 다시 시도하십시오. 계정이 아직 확인되지 않은 경우 새 확인 이메일이 전송되었습니다.
 message.title=뉴스
 message.match=경기! 누군가 당신을 좋아합니다! 메시지를 보내려면 여기를 누르세요 :)
