--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -140,6 +140,7 @@ login.oauth.google=Войти в систему с помощью Google
 login.oauth.facebook=Войти в систему с помощью Facebook
 login.email.sign-in=Вход в систему с помощью электронной почты
 login.register=У вас нет счета?
+login.remember=Оставайтесь в системе
 login.js.error=Вход не удался, пожалуйста, проверьте данные для входа, заполните капчу и попробуйте еще раз. Если ваш аккаунт еще не был подтвержден, было отправлено новое подтверждение по электронной почте.
 message.title=Новости
 message.match=Матч! Ты кому-то нравишься! Введите здесь, чтобы отправить сообщение :)
