--- a/src/main/resources/i18n/messages_zh.properties
+++ b/src/main/resources/i18n/messages_zh.properties
@@ -140,6 +140,7 @@ login.oauth.google=用Google登录
 login.oauth.facebook=用Facebook登录
 login.email.sign-in=用电子邮件登录
 login.register=没有账户？
+login.remember=保持登录状态
 login.js.error=登录失败，请检查登录数据，填写验证码后再试。如果您的账户还未被验证，我们已经发送了一封新的确认邮件。
 message.title=新闻中心
 message.match=一场比赛！有人喜欢你了！在这里输入信息 :)
