--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -149,6 +149,7 @@ login.oauth.google=Sign in with Google
 login.oauth.facebook=Sign in with Facebook
 login.email.sign-in=Sign in with email
 login.register=Don't have an account?
+login.remember=Remember me
 login.privacy-policy=Privacy policy was updated on the 
 login.js.error=Login failed, please check your credentials, complete the captcha and try again. A new confirmation email has been sent to you if your account hasn't been verified yet.
 
