--- a/src/main/resources/i18n/messages_pt.properties
+++ b/src/main/resources/i18n/messages_pt.properties
@@ -140,6 +140,7 @@ login.oauth.google=Iniciar sessão com o Google
 login.oauth.facebook=Iniciar sessão com o Facebook
 login.email.sign-in=Login com e-mail
 login.register=Não tem uma conta?
+login.remember=Permanecer logado
 login.js.error=O login falhou, por favor verifique os dados de login, preencha o captcha e tente novamente. Foi enviado um novo e-mail de confirmação se a sua conta ainda não tiver sido verificada.
 message.title=Notícias
 message.match=Um match! Alguém gosta de ti de volta! Escreva aqui para enviar uma mensagem :)
