Added 2 new sort options in search (total donations and new users). Improve search overlay to prevent consecutive search activations. Some sort algorithms now directly filter in query instead of in code.

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -211,6 +211,8 @@ search.max-distance=Maximum distance
 search.sort.filter.distance=Lowest distance
 search.sort.filter.active=Active date
 search.sort.filter.interests=Interests
+search.sort.filter.total-donation=Total donations
+search.sort.filter.new-users=New users
 search.donation.popup=Do you want to donate? Each cent will help us reach out new users and add new features to improve the overall experience!
 search.warning.global=No compatible users in your area. Showing users all around the globe.
 search.warning.incompatible=No compatible users found. Showing incompatible users, be careful!
