--- a/src/main/resources/i18n/messages_cz.properties
+++ b/src/main/resources/i18n/messages_cz.properties
@@ -211,6 +211,8 @@ search.max-distance=Maximální vzdálenost
 search.sort.filter.distance=Nejmenší vzdálenost
 search.sort.filter.active=Aktivní datum
 search.sort.filter.interests=Zájmy
+search.sort.filter.total-donation=Dary celkem
+search.sort.filter.new-users=Noví uživatelé
 search.donation.popup=Chcete darovat? Každý cent nám pomůže oslovit nové uživatele a přidat nové funkce ke zlepšení celkového zážitku!
 search.warning.global=Ve vaší oblasti nejsou žádní kompatibilní uživatelé. Zobrazují se uživatelé po celém světě.
 search.warning.incompatible=Nebyli nalezeni žádní kompatibilní uživatelé. Zobrazují se nekompatibilní uživatelé, buďte opatrní!
