--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -202,7 +202,9 @@ search.max-distance=Maximale Entfernung
 search.sort.filter.distance=Kleinster Abstand
 search.sort.filter.active=Zuletzt aktiv
 search.sort.filter.interests=Interessen
-search.donation.popup=Möchtest du spenden? Jeder Cent hilft uns, neue Benutzer zu erreichen und neue Funktionen hinzuzufügen, um dein Erlebnis zu verbessern!
+search.sort.filter.total-donation=Gesamtspenden
+search.sort.filter.new-users=Neue Nutzer
+search.donation.popup=Möchtest Du spenden? Jeder Cent hilft uns, neue Benutzer zu erreichen und neue Funktionen hinzuzufügen, um dein Erlebnis zu verbessern!
 search.warning.global=Keine kompatiblen Nutzer in Deinem Umfeld. Es werden nun Nutzer aus der ganzen Welt angezeigt.
 search.warning.incompatible=Keine kompatiblen Nutzer gefunden. Es werden nun auch inkompatible Nutzer angezeigt, sei also achtsam!
 search.js.error.no-geolocation=Dein Browser unterstützt keine HTML5-Geolokalisierung. Bitte versuche es mit einem anderen Browser.
