--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -200,6 +200,8 @@ search.max-distance=Distance maximale
 search.sort.filter.distance=La plus petite distance
 search.sort.filter.active=Dernière activité
 search.sort.filter.interests=Intérêts
+search.sort.filter.total-donation=Total des dons
+search.sort.filter.new-users=Nouveaux utilisateurs
 search.donation.popup=Vous voulez faire un don? Chaque centime nous aide à atteindre de nouveaux utilisateurs et à ajouter de nouvelles fonctionnalités pour améliorer votre expérience!
 search.warning.global=Aucun utilisateur compatible dans votre environnement. Les utilisateurs du monde entier sont désormais affichés.
 search.warning.incompatible=Aucun utilisateur compatible trouvé. Les utilisateurs incompatibles sont maintenant aussi affichés, alors faites attention !
