--- a/src/main/resources/i18n/messages_it.properties
+++ b/src/main/resources/i18n/messages_it.properties
@@ -200,6 +200,8 @@ search.max-distance=Distanza massima
 search.sort.filter.distance=Distanza minima
 search.sort.filter.active=Ultimo attivo
 search.sort.filter.interests=Interessi
+search.sort.filter.total-donation=Totale donazioni
+search.sort.filter.new-users=Nuovi utenti
 search.donation.popup=Vuoi donare? Ogni centesimo ci aiuta a raggiungere nuovi utenti e ad aggiungere nuove funzionalità per migliorare la tua esperienza!
 search.warning.global=Nessun utente compatibile nel tuo ambiente. Ora vengono visualizzati gli utenti di tutto il mondo.
 search.warning.incompatible=Nessun utente compatibile trovato. Ora vengono visualizzati anche gli utenti incompatibili, quindi fate attenzione!
