--- a/src/main/resources/i18n/messages_ja.properties
+++ b/src/main/resources/i18n/messages_ja.properties
@@ -200,6 +200,8 @@ search.max-distance=最大距離
 search.sort.filter.distance=最短距離
 search.sort.filter.active=最後のアクティブ
 search.sort.filter.interests=関心事
+search.sort.filter.total-donation=寄付金総額
+search.sort.filter.new-users=新規ユーザー
 search.donation.popup=寄付をしたいですか？すべてのセントは、私たちが新しいユーザーに到達し、あなたの経験を向上させるための新機能を追加するのに役立ちます。
 search.warning.global=あなたの環境では互換性のあるユーザーがいません。世界各国のユーザーが表示されるようになりました。
 search.warning.incompatible=互換性のあるユーザーが見つかりませんでした。相性の悪いユーザーも表示されるようになったので、注意が必要です。
