--- a/src/main/resources/i18n/messages_pt.properties
+++ b/src/main/resources/i18n/messages_pt.properties
@@ -200,6 +200,8 @@ search.max-distance=Distância máxima
 search.sort.filter.distance=Menor distância
 search.sort.filter.active=Último activo
 search.sort.filter.interests=Interesses
+search.sort.filter.total-donation=Doações totais
+search.sort.filter.new-users=Novos utilizadores
 search.donation.popup=Quer doar? Cada cêntimo ajuda-nos a chegar a novos utilizadores e a acrescentar novas funcionalidades para melhorar a sua experiência!
 search.warning.global=Não há utilizadores compatíveis no seu ambiente. Utilizadores de todo o mundo são agora exibidos.
 search.warning.incompatible=Não foram encontrados utilizadores compatíveis. Os utilizadores incompatíveis são agora também exibidos, por isso tenha cuidado!
