--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -200,6 +200,8 @@ search.max-distance=Максимальное расстояние
 search.sort.filter.distance=Наикратчайшее расстояние
 search.sort.filter.active=Последний активный
 search.sort.filter.interests=Интересы
+search.sort.filter.total-donation=Всего пожертвований
+search.sort.filter.new-users=Новые пользователи
 search.donation.popup=Хочешь пожертвовать? Каждый цент помогает нам охватить новых пользователей и добавить новые функции для улучшения вашего опыта!
 search.warning.global=Нет совместимых пользователей в вашей среде. Теперь отображаются пользователи со всего мира.
 search.warning.incompatible=Не найдено совместимых пользователей. Несовместимые пользователи теперь также отображаются, поэтому будьте осторожны!
