--- a/src/main/resources/i18n/messages_es.properties
+++ b/src/main/resources/i18n/messages_es.properties
@@ -200,6 +200,8 @@ search.max-distance=La distancia máxima
 search.sort.filter.distance=La distancia más pequeña
 search.sort.filter.active=El último activo
 search.sort.filter.interests=Intereses
+search.sort.filter.total-donation=Total de donaciones
+search.sort.filter.new-users=Nuevos usuarios
 search.donation.popup=¿Quiere donar? Cada céntimo nos ayuda a llegar a nuevos usuarios y a añadir nuevas funciones para mejorar tu experiencia.
 search.warning.global=No hay usuarios compatibles en su entorno. Ahora aparecen usuarios de todo el mundo.
 search.warning.incompatible=No se han encontrado usuarios compatibles. Ahora también se muestran los usuarios incompatibles, ¡así que ten cuidado!
