Fixed missing translation

--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -94,7 +94,7 @@ profile.warning.no-description=Keine Beschreibung gefunden!
 profile.warning.no-intention=Keine Intention gefunden!
 profile.warning.no-gender-preference=Keine Geschlechtspräferenz gefunden!
 profile.warning.no-location=Kein Standort gefunden! Dieser wird automatisch gesetzt, wenn nach anderen Nutzern gesucht wird!
-profile.warning.intention.limit=
+profile.warning.intention.limit=Intention geändert. Du kannst dies in 24h wieder ändern.
 
 delete-account.title=Konto löschen
 delete-account.confirm=Ich bestätige hiermit, mein Konto endgültig zu löschen.
